--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <i class="fa fa-times" onclick="hideMenu()" aria-hidden="true"></i>
                 <ul>
                     <li><a href="index.html"><img  class="logo" style="align-self: left;" src="images/logo (1).svg"></a></li>
-                    <li><a href="/" style="text-decoration-color: #fff;">Home</a> </li>
+                    <li><a href="index.html" ">Home</a> </li>
                     <li><a href="about.html">About</a> </li>
                     <li><a href="service.html">Services</a> </li>
                     <li><a href="contacts.html">Contact</a> </li>
