--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 <body>
     <section class="header-contacts">
         <nav>
-            <a href="index.html"><img src="images/logo (1).svg" ></a>
+            <a href="index.html"><img src="logo (1).svg" ></a>
             <div class="nav-links" id="navLinks" >
                 <i class="fa fa-times" onclick="hideMenu()" aria-hidden="true"></i>
                 <ul>
@@ -50,7 +50,7 @@
             
             <div class="p-4 lg:w-1/2">
               <div class="h-full flex sm:flex-row flex-col items-center sm:justify-start justify-center text-center sm:text-left">
-                <img alt="team" class="flex-shrink-0 rounded-lg w-48 h-48 object-cover object-center sm:mb-0 mb-4" src="images/avatar1.jpeg">
+                <img alt="team" class="flex-shrink-0 rounded-lg w-48 h-48 object-cover object-center sm:mb-0 mb-4" src="avatar1.jpeg">
                 <div class="flex-grow sm:pl-8">
                   <h2 class="title-font font-medium text-lg text-gray-900">Arshad Khan</h2>
                   <h3 class="text-gray-500 mb-3">Developer</h3>
@@ -77,7 +77,7 @@
             </div>
             <div class="p-4 lg:w-1/2">
               <div class="h-full flex sm:flex-row flex-col items-center sm:justify-start justify-center text-center sm:text-left">
-                <img alt="team" class="flex-shrink-0 rounded-lg w-48 h-48 object-cover object-center sm:mb-0 mb-4" src="images/avatar2.jpeg">
+                <img alt="team" class="flex-shrink-0 rounded-lg w-48 h-48 object-cover object-center sm:mb-0 mb-4" src="avatar2.jpeg">
                 <div class="flex-grow sm:pl-8">
                   <h2 class="title-font font-medium text-lg text-gray-900">Hariom Singh</h2>
                   <h3 class="text-gray-500 mb-3">Developer</h3>
