--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
             <div class="nav-links" id="navLinks" >
                 <i class="fa fa-times" onclick="hideMenu()" aria-hidden="true"></i>
                 <ul>
-                    <li><a href="/" >Home</a> </li>
+                    <li><a href="index.html" >Home</a> </li>
                     <li><a href="about.html">About</a> </li>
                     <li><a href="service.html">Services</a> </li>
                     <li><a href="contacts.html">Contact</a> </li>
