--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu()" aria-hidden="true"></i>
                 <ul>
-                    <li><a href="index.html"><img  class="logo" style="align-self: left;" src="images/logo (1).svg"></a></li>
+                    <li><a href="index.html"><img  class="logo" style="align-self: left;" src="logo (1).svg"></a></li>
                     <li><a href="index.html" ">Home</a> </li>
                     <li><a href="about.html">About</a> </li>
                     <li><a href="service.html">Services</a> </li>
@@ -52,28 +52,28 @@
         </div>
         <div class="row">
             <div class="service-col col-md-3">
-                <img src="images/idea.jpeg" alt="">
+                <img src="idea.jpeg" alt="">
                 <div class="layer">
                     <h3>Idea</h3>
                 </div>
 
             </div>
             <div class="service-col col-md-3">
-                <img src="images/design.jpeg" alt="">
+                <img src="design.jpeg" alt="">
                 <div class="layer">
                     <h3>Design</h3>
                 </div>
 
             </div>
             <div class="service-col col-md-3">
-                <img src="images/development.jpeg" alt="">
+                <img src="development.jpeg" alt="">
                 <div class="layer">
                     <h3>Development</h3>
                 </div>
 
             </div>
             <div class="service-col col-md-3">
-                <img src="images/maintainance.jpeg" alt="">
+                <img src="maintainance.jpeg" alt="">
                 <div class="layer">
                     <h3>Maintainance</h3>
                 </div>
@@ -96,7 +96,7 @@
             </div>
           </div>
           <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
-            <img class="object-cover object-center rounded" alt="hero" src="images/website.jpeg">
+            <img class="object-cover object-center rounded" alt="hero" src="website.jpeg">
           </div>
         </div>
       </section>
@@ -104,7 +104,7 @@
       <section class="text-gray-600 body-font">
         <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
           <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0">
-            <img class="object-cover object-center rounded" alt="hero" src="images/app.jpeg">
+            <img class="object-cover object-center rounded" alt="hero" src="app.jpeg">
           </div>
           <div class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center ">
             <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Manage your brand 
@@ -132,7 +132,7 @@
             </div>
           </div>
           <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
-            <img class="object-cover object-center rounded" alt="hero" src="images/online-presence.jpeg">
+            <img class="object-cover object-center rounded" alt="hero" src="online-presence.jpeg">
           </div>
         </div>
       </section>
