--- a/service.html
+++ b/service.html
@@ -15,7 +15,7 @@
 <body>
     <section class="header-contacts">
         <nav>
-            <a href="index.html"><img src="images/logo (1).svg" ></a>
+            <a href="index.html"><img src="logo (1).svg" ></a>
             <div class="nav-links" id="navLinks" >
                 <i class="fa fa-times" onclick="hideMenu()" aria-hidden="true"></i>
                 <ul>
